--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "description": "A lightweight JavaScript library for building offline-first applications using a key-value database wrapper for Chrome localStorage.",
   "main": "src/index.js",
+  "type": "module",
   "scripts": {
-    "test": "npm test"
+    "build": "rollup -c",
+    "minify": "terser dist/doltstore*.js -o dist/doltstore.min.js",
+    "test": "jest"
   },
   "keywords": [
     "offline-first",
@@ -20,9 +23,15 @@
   "author": "Dolt Labs <contactus@doltlabs.in>",
   "license": "MIT",
   "devDependencies": {
+    "@babel/cli": "^7.26.4",
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@rollup/plugin-commonjs": "^28.0.2",
     "@rollup/plugin-node-resolve": "^16.0.0",
+    "babel-jest": "^29.7.0",
     "eslint": "^9.18.0",
     "jest": "^29.7.0",
-    "rollup": "^4.30.1"
+    "rollup": "^4.30.1",
+    "terser": "^5.37.0"
   }
 }
