--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "rollup -c",
     "minify": "terser --comments \"/^!/\" dist/doltlabs*.js -o dist/doltlabs-dbstore.min.js",
-    "test": "jest"
+    "test": "jest",
+    "package": "npm run build && npm run minify"
   },
   "keywords": [
     "offline-first",
@@ -32,6 +33,9 @@
     "eslint": "^9.18.0",
     "jest": "^29.7.0",
     "rollup": "^4.30.1",
-    "terser": "^5.37.0"
+    "terser": "^5.37.0",
+    "jest-localstorage-mock": "^2.4.26"
+  },
+  "dependencies": {
   }
 }
